--- a/Spring Boot/20200619Day1.md
+++ b/Spring Boot/20200619Day1.md
@@ -5,7 +5,7 @@ Spring Boot篇
 */
 
 
-<font color="red">1.IoC(Inversion of Control控制反轉)/DI(Dependency Injection 依賴注入)</font>
+<mark style="color:red;">1.IoC(Inversion of Control控制反轉)/DI(Dependency Injection 依賴注入)</mark>
 將Object的控制權交給外部的Spring容器來管理
 原本做法:
 public class Teacher{
