--- a/Spring Boot/20200619Day1.md
+++ b/Spring Boot/20200619Day1.md
@@ -1,6 +1,4 @@
-> 有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止
-> 2024/06/19 Day1
-> Spring Boot篇
+> 有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止 2024/06/19 Day1 Spring Boot篇
 
 
 
