--- a/Spring Boot/20200619Day1.md
+++ b/Spring Boot/20200619Day1.md
@@ -2,15 +2,17 @@
 
 
 
-<mark style="color:red;">1.IoC(Inversion of Control控制反轉)/DI(Dependency Injection 依賴注入)</mark>
+1.IoC(Inversion of Control控制反轉)/DI(Dependency Injection 依賴注入)
 將Object的控制權交給外部的Spring容器來管理
 原本做法:
+```java
 public class Teacher{
    private Printer printer = new HpPrinter();
 	public void teach(){
 	   System.out.println("I'm a teacher");   
 	}
 }
+```
 IoC:
 public class Teacher{
    private Printer printer;
