--- a/Spring Boot/20200619Day1.md
+++ b/Spring Boot/20200619Day1.md
@@ -2,9 +2,9 @@
 
 
 
-1.IoC(Inversion of Control控制反轉)/DI(Dependency Injection 依賴注入)
-將Object的控制權交給外部的Spring容器來管理
-原本做法:
+# 1.IoC(Inversion of Control控制反轉)/DI(Dependency Injection 依賴注入)
+## 將Object的控制權交給外部的Spring容器來管理
+## 原本做法:
 ```java
 public class Teacher{
    private Printer printer = new HpPrinter();
@@ -14,13 +14,15 @@ public class Teacher{
 }
 ```
 IoC:
+
+```java
 public class Teacher{
    private Printer printer;
 	public void teach(){
 	   System.out.println("I'm a teacher");   
 	}
 }
-	
+```	
 
 簡單來說是一種將新建和管理的工作交給Spring容器，開發者只需要定義對象的依賴關係，而不需要關心創建與初始化過程。
 這樣讓程式更加模組化，並提高了程式的可維護性。
