--- a/Spring Boot/20200619Day1.md
+++ b/Spring Boot/20200619Day1.md
@@ -2,7 +2,7 @@
 
 
 
-### 1.IoC(Inversion of Control控制反轉)/DI(Dependency Injection 依賴注入)
+##### 1.IoC(Inversion of Control控制反轉)/DI(Dependency Injection 依賴注入)
 將Object的控制權交給外部的Spring容器來管理
 **原本做法:**
 ```java
@@ -30,13 +30,14 @@ public class Teacher{
 初始化bean:@PostConstruct  
 注入bean:@Autowired;如有多個同類的可以搭配@Qualifier  
 
-//2.AOP:切面導向設計，就是將共通邏輯寫在切面，由切面統一去處理
-在class上加上@Aspect+Component就可以創建切面
-常搭配的註解有@Before、@After、@Around
-最常使用在權限驗證、統一的exception、Log紀錄
+### 2.AOP:切面導向設計，就是將共通邏輯寫在切面，由切面統一去處理
+在class上加上@Aspect+Component就可以創建切面  
+常搭配的註解有@Before、@After、@Around  
+最常使用在權限驗證、統一的exception、Log紀錄  
 
-//New~~~New~~~New~~~New~~~New~~~New~~~New~~~New~~~New~~~New~~~//
-/*
+- - -
+
+
 一.取得請求參數
 @RequestParam取得URL參數
 1.未定義的參數Spring Boot會忽略
