--- a/Spring Boot/20200619Day1.md
+++ b/Spring Boot/20200619Day1.md
@@ -2,7 +2,7 @@
 
 
 
-##### 1.IoC(Inversion of Control控制反轉)/DI(Dependency Injection 依賴注入)
+#### 1.IoC(Inversion of Control控制反轉)/DI(Dependency Injection 依賴注入)
 將Object的控制權交給外部的Spring容器來管理
 **原本做法:**
 ```java
