--- a/Spring Boot/20200619Day1.md
+++ b/Spring Boot/20200619Day1.md
@@ -1,51 +1,25 @@
-> 有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止 2024/06/19 Day1 Spring Boot篇
+**1.IOC(控制反轉與依賴注入)**
+是一種將新建和管理的工作交給Spring容器，開發者只需要定義對象的依賴關係，而不需要關心創建與初始化過程。
+這樣讓程式更加模組化，並提高了程式的可維護性。
+基本創建bean:`@Component`
+初始化bean:`@PostConstruct`
+注入bean:`@Autowired`;如有多個同類的可以搭配`@Qualifier`
 
+**2.AOP:切面導向設計，就是將共通邏輯寫在切面，由切面統一去處理**
+在class上加上`@Aspect`+`@Component`就可以創建切面
+常搭配的註解有`@Before`、`@After`、`@Around`
+最常使用在權限驗證、統一的exception、Log紀錄
 
-
-### 1.IoC(Inversion of Control控制反轉)/DI(Dependency Injection 依賴注入)
-將Object的控制權交給外部的Spring容器來管理
-**原本做法:**
-```java
-public class Teacher{
-   private Printer printer = new HpPrinter();
-	public void teach(){
-	   System.out.println("I'm a teacher");   
-	}
-}
-```
-**IoC:**
-
-```java
-public class Teacher{
-   private Printer printer;
-	public void teach(){
-	   System.out.println("I'm a teacher");   
-	}
-}
-```	
-
-簡單來說是一種將新建和管理的工作交給Spring容器，開發者只需要定義對象的依賴關係，而不需要關心創建與初始化過程。  
-這樣讓程式更加模組化，並提高了程式的可維護性。  
-基本創建bean:@Component  
-初始化bean:@PostConstruct  
-注入bean:@Autowired;如有多個同類的可以搭配@Qualifier  
-
-### 2.AOP:切面導向設計，就是將共通邏輯寫在切面，由切面統一去處理
-在class上加上@Aspect+Component就可以創建切面  
-常搭配的註解有@Before、@After、@Around  
-最常使用在權限驗證、統一的exception、Log紀錄  
-
-- - -
-
-
-一.取得請求參數
-@RequestParam取得URL參數
+*New~~*
+**一.取得請求參數**
+`@RequestParam`取得URL參數
 1.未定義的參數Spring Boot會忽略
 2.少傳參數會error
 3.required = false可以讓參數忽略
 4.defaultValue = "22"，可以預設值
 5.『http://localhost:8080/test?id=123』，是把id當成一般的url請求參數來傳遞
-*/  
+
+```java
     @RequestMapping("/test1")
     public String test1(@RequestParam(defaultValue = "22") Integer id,
                         @RequestParam(required = false) String name),
@@ -55,34 +29,40 @@ public class Teacher{
 		System.out.println("age :"+age);
         return "Hello test1";
     }
-/*
-@RequestBody取得Body參數
+```
+
+`@RequestBody`取得Body參數
 1.加在method，可取得RequestBody的參數
 2.body多加參數,沒定義的話，一樣可以執行，但Spring Boot會忽略掉此參數
 3.body少加參數一樣可以執行
-*/
+
+```java
     @RequestMapping("/test2")
     public String test2(@RequestBody Student student){
         System.out.println("Student id: "+student.getId());
         System.out.println("Student name: "+student.getName());
         return "Hello test2";
     }
-/*
-@RequestHeader取的Header參數
+```
+
+`@RequestHeader`取的Header參數
 1.name = "Content-Type"，指定參數，跟@RequestParam一樣，但比較常使用到
 2.required = false可以讓參數忽略
 3.API文件上很常要取Header資訊，例如token之類的
-*/
+
+```java
     @RequestMapping("/test3")
     public String test3(@RequestHeader String info){
         System.out.println("Header info: "+info);
         return "Hello test3";
     }
-/*
-@PathVariable取的URL的值
-1.跟@RequestParam不太一樣
+```
+
+`@PathVariable`取的URL的值
+1.跟`@RequestParam`不太一樣
 2.『http://localhost:8080/test/123』，是把123放進url路徑裡面來傳遞
-*/
+
+```java
     @RequestMapping("/test4/{id}/{name}")
     public String test4(@PathVariable Integer id,
                         @PathVariable String name){
@@ -90,8 +70,9 @@ public class Teacher{
         System.out.println("PathVariable name: "+name);
         return "Hello test4";
     }
-/*
-二.了解如何設計RESTful API
+```
+
+**二.了解如何設計RESTful API**
 設計的API符合REST風格，就是RESTful API，目的:簡化溝通成本，
 REST只是一個風格，依情境選擇適當的作法即可
 
@@ -100,12 +81,17 @@ REST只是一個風格，依情境選擇適當的作法即可
   GET/Read(查詢)/取得一個資源
   PUT/Update(修改)/更新一個已存在的資源
   DELETE/Delete(刪除)/刪除一個資源
+
 2.使用url路徑描述資源之間的階層關係
-GET/users -> 取得所有user
-GET/users/123 -> 取得user id為123的user
-GET/users/123/articles -> 取得user id為123的user所寫的文章
-GET/users/123/articles/456 -> 取得user id為123的user所寫的article id為456的文章
+
+| 階層                       | 說明                                              |
+| -------------------------- | ------------------------------------------------- |
+| GET/users                  | 取得所有user                                      |
+| GET/users/123              | 取得user id為123的user                            |
+| GET/users/123/articles     | 取得user id為123的user所寫的文章                  |
+| GET/users/123/articles/456 | 取得user id為123的user所寫的article id為456的文章 |
+
 每一個/代表一個階層(子集合的概念)
+
 3.response body返回json或是xml格式
-當class加上@RestController就是符合Rest風格的Controller，所有方法的返回值都是json
-*/
+當class加上`@RestController`就是符合Rest風格的Controller，所有方法的返回值都是json
