--- a/Spring Boot/20200619Day1.md
+++ b/Spring Boot/20200619Day1.md
@@ -1,11 +1,35 @@
-**1.IOC(控制反轉與依賴注入)**
-是一種將新建和管理的工作交給Spring容器，開發者只需要定義對象的依賴關係，而不需要關心創建與初始化過程。
-這樣讓程式更加模組化，並提高了程式的可維護性。
-基本創建bean:`@Component`
-初始化bean:`@PostConstruct`
-注入bean:`@Autowired`;如有多個同類的可以搭配`@Qualifier`
+>有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止 2024/06/20 Day2
 
-**2.AOP:切面導向設計，就是將共通邏輯寫在切面，由切面統一去處理**
+### 1.IoC(Inversion of Control控制反轉)/DI(Dependency Injection 依賴注入)
+將Object的控制權交給外部的Spring容器來管理  
+**原本做法:**
+```java
+public class Teacher{
+   private Printer printer = new HpPrinter();
+	public void teach(){
+	   System.out.println("I'm a teacher");   
+	}
+}
+```
+**IoC:**
+
+```java
+public class Teacher{
+   private Printer printer;
+	public void teach(){
+	   System.out.println("I'm a teacher");   
+	}
+}
+```
+
+
+是一種將新建和管理的工作交給Spring容器，開發者只需要定義對象的依賴關係，而不需要關心創建與初始化過程。  
+這樣讓程式更加模組化，並提高了程式的可維護性。  
+基本創建bean:`@Component`  
+初始化bean:`@PostConstruct`  
+注入bean:`@Autowired`;如有多個同類的可以搭配`@Qualifier`  
+
+### 2.AOP:切面導向設計，就是將共通邏輯寫在切面，由切面統一去處理**
 在class上加上`@Aspect`+`@Component`就可以創建切面
 常搭配的註解有`@Before`、`@After`、`@Around`
 最常使用在權限驗證、統一的exception、Log紀錄
