--- a/Spring Boot/20200619Day1.md
+++ b/Spring Boot/20200619Day1.md
@@ -29,13 +29,13 @@ public class Teacher{
 初始化bean:`@PostConstruct`  
 注入bean:`@Autowired`;如有多個同類的可以搭配`@Qualifier`  
 
-### 2.AOP:切面導向設計，就是將共通邏輯寫在切面，由切面統一去處理**
+### 2.AOP:切面導向設計，就是將共通邏輯寫在切面，由切面統一去處理
 在class上加上`@Aspect`+`@Component`就可以創建切面
 常搭配的註解有`@Before`、`@After`、`@Around`
 最常使用在權限驗證、統一的exception、Log紀錄
 
-*New~~*
-**一.取得請求參數**
+*New~~*  
+### 一.取得請求參數
 `@RequestParam`取得URL參數
 1.未定義的參數Spring Boot會忽略
 2.少傳參數會error
@@ -70,9 +70,9 @@ public class Teacher{
 ```
 
 `@RequestHeader`取的Header參數
-1.name = "Content-Type"，指定參數，跟@RequestParam一樣，但比較常使用到
-2.required = false可以讓參數忽略
-3.API文件上很常要取Header資訊，例如token之類的
+**1.name = "Content-Type"，指定參數，跟@RequestParam一樣，但比較常使用到**
+**2.required = false可以讓參數忽略**
+**3.API文件上很常要取Header資訊，例如token之類的**
 
 ```java
     @RequestMapping("/test3")
@@ -83,8 +83,8 @@ public class Teacher{
 ```
 
 `@PathVariable`取的URL的值
-1.跟`@RequestParam`不太一樣
-2.『http://localhost:8080/test/123』，是把123放進url路徑裡面來傳遞
+**1.跟`@RequestParam`不太一樣**
+**2.『http://localhost:8080/test/123』，是把123放進url路徑裡面來傳遞**
 
 ```java
     @RequestMapping("/test4/{id}/{name}")
@@ -96,17 +96,17 @@ public class Teacher{
     }
 ```
 
-**二.了解如何設計RESTful API**
+### 二.了解如何設計RESTful API
 設計的API符合REST風格，就是RESTful API，目的:簡化溝通成本，
 REST只是一個風格，依情境選擇適當的作法即可
 
-1.使用http method表示動作
+**1.使用http method表示動作**
   POST/Create(新增)/新增一個資源
   GET/Read(查詢)/取得一個資源
   PUT/Update(修改)/更新一個已存在的資源
   DELETE/Delete(刪除)/刪除一個資源
 
-2.使用url路徑描述資源之間的階層關係
+**2.使用url路徑描述資源之間的階層關係**
 
 | 階層                       | 說明                                              |
 | -------------------------- | ------------------------------------------------- |
@@ -117,5 +117,5 @@ REST只是一個風格，依情境選擇適當的作法即可
 
 每一個/代表一個階層(子集合的概念)
 
-3.response body返回json或是xml格式
+**3.response body返回json或是xml格式**
 當class加上`@RestController`就是符合Rest風格的Controller，所有方法的返回值都是json
