IOC(DI)+AOP+取得請求參數+了解如何設計RESTful API

--- a/Spring Boot/20200619Day1.md
+++ b/Spring Boot/20200619Day1.md
@@ -34,10 +34,10 @@ public class Teacher{
 常搭配的註解有`@Before`、`@After`、`@Around`  
 最常使用在權限驗證、統一的exception、Log紀錄  
 
-- - -
+***
  
 ### 一.取得請求參數
-==`@RequestParam`取得URL參數==  
+`@RequestParam`==取得URL參數==  
 1.未定義的參數Spring Boot會忽略  
 2.少傳參數會error  
 3.required = false可以讓參數忽略  
