--- a/Spring Boot/20200619Day1.md
+++ b/Spring Boot/20200619Day1.md
@@ -37,7 +37,7 @@ public class Teacher{
 ***
  
 ### 一.取得請求參數
-`@RequestParam`<font color=#008000>取得URL參數</font>  
+- `@RequestParam`取得URL參數
 1. 未定義的參數Spring Boot會忽略  
 2. 少傳參數會error  
 3. required = false可以讓參數忽略  
