IOC(DI)+AOP+取得請求參數+了解如何設計RESTful API

--- a/Spring Boot/20200619Day1.md
+++ b/Spring Boot/20200619Day1.md
@@ -37,7 +37,7 @@ public class Teacher{
 ***
  
 ### 一.取得請求參數
-++`@RequestParam`取得URL參數++  
+- `@RequestParam`取得URL參數  
 1. 未定義的參數Spring Boot會忽略  
 2. 少傳參數會error  
 3. required = false可以讓參數忽略  
@@ -70,7 +70,7 @@ public class Teacher{
     }
 ```
 
-==`@RequestHeader`取的Header參數==  
+- `@RequestHeader`取的Header參數  
 1. name = "Content-Type"，指定參數，跟@RequestParam一樣，但比較常使用到  
 2. required = false可以讓參數忽略  
 3. API文件上很常要取Header資訊，例如token之類的  
@@ -83,7 +83,7 @@ public class Teacher{
     }
 ```
 
-==`@PathVariable`取的URL的值==  
+- `@PathVariable`取的URL的值  
 1. 跟`@RequestParam`不太一樣  
 2. 『http://localhost:8080/test/123』，是把123放進url路徑裡面來傳遞  
 
