IOC(DI)+AOP+取得請求參數+了解如何設計RESTful API

--- a/Spring Boot/20200619Day1.md
+++ b/Spring Boot/20200619Day1.md
@@ -56,7 +56,7 @@ public class Teacher{
     }
 ```
 
-==`@RequestBody`取得Body參數==  
+- `@RequestBody`取得Body參數  
 1. 加在method，可取得RequestBody的參數  
 2. body多加參數,沒定義的話，一樣可以執行，但Spring Boot會忽略掉此參數  
 3. body少加參數一樣可以執行  
