學習實作出RESTful API與使用各種Mapping註解

--- a/Spring Boot/20240620Day2.md
+++ b/Spring Boot/20240620Day2.md
@@ -1,19 +1,25 @@
-/*有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止
-2024/06/20 Day2
-Spring Boot篇
-*/
+>有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止 2024/06/20 Day2 Spring Boot篇
 
-//一.實作出RESTful API
+
+### 一.實作出RESTful API
+```java
 public class Student {
     Integer id;
     String name;
 }
+```
+| 方法   | url           | 說明                                      |
+| ------ | -------------- | ---------------------------------------- |
+| POST   | /Students     |Create(新增);創建一個新的Student           |
+| GET    | /Students/123 |Read(查詢);查詢Student id為123的資訊       |
+| PUT    | /Students/123 |Update(修改);更新Student id為123的資訊     |
+| DELETE | /Students/123 |Delete(刪除);刪除Student id為123的Student  |
 
-/*
-POST;/Students;Create(新增);創建一個新的Student
-GET;/Students/123;Read(查詢);查詢Student id為123的資訊
-PUT;/Students/123;Update(修改);更新Student id為123的資訊
-DELETE;/Students/123;Delete(刪除);刪除Student id為123的Student
+
+
+
+
+
 
 限制前端使用方法
 @PostMapping
