學習實作出RESTful API與使用各種Mapping註解

--- a/Spring Boot/20240620Day2.md
+++ b/Spring Boot/20240620Day2.md
@@ -16,10 +16,10 @@ public class Student {
 | DELETE | /Students/123 |Delete(刪除);刪除Student id為123的Student  |
 
 **限制前端使用方法**  
-`@PostMapping  
-`@GetMapping  
-`@PutMapping  
-`@DeleteMapping  
+`@PostMapping`  
+`@GetMapping`  
+`@PutMapping`  
+`@DeleteMapping`  
 
 <u>1.POST方法<u>  
 限制前端只能用POST方法  
@@ -106,50 +106,37 @@ public class Student {
         return "執行資料庫的 Create 操作";
     }
 ```
-
-  還有其他(*代表常用)，要記的載入正確的package才能使用
-* @NotNul       不能為null
-* @NotBlank     不能為null，且不能為空白的字串，用在驗證String類型的參數上
-* @NotEmpty     不能為null，且size必須>0，用在驗證集合類型(List、Set、Map)的參數上
-  @Min(value)   值必須>=value，用在驗證數字類型的參數上
-  @Max(value)   值必須<=value，用在驗證數字類型的參數上
-  @Size(min,max)
-  @Email
-  @Pattern(regexp)
-  @Past
-  @Future
-  @AssertTrue
-  @AssertFalse
-  @Null
 還有其他(*代表常用)，要記的載入正確的package才能使用  
-| 方法              | url                                                            | 
-| ---------------- | -------------------------------------------------------------- | 
-| * @NotNul        | 不能為null                                                      |
-| * @NotBlank      | 不能為null，且不能為空白的字串，用在驗證String類型的參數上         |
-| * @NotEmpty      | 不能為null，且size必須>0，用在驗證集合類型(List、Set、Map)的參數上 |
-| @Min(value)      | 值必須>=value，用在驗證數字類型的參數上                           |
-| @Max(value)      |                                                                |
-| @Size(min,max)   |                                                                |
-| @Email           |                                                                |
-| @Pattern(regexp) |                                                                |
-| @Past            |                                                                |
-| @Future          |                                                                |
-| @AssertTrue      |                                                                |
-| @AssertFalse     |                                                                |
-| @Null            |                                                                |
+| 方法              | url                                                            |
+| ----------------- | -------------------------------------------------------------- | 
+| * `@NotNul`        | 不能為null                                                      |
+| * `@NotBlank`      | 不能為null，且不能為空白的字串，用在驗證String類型的參數上         |
+| * `@NotEmpty`     | 不能為null，且size必須>0，用在驗證集合類型(List、Set、Map)的參數上 |
+| `@Min(value)`      | 值必須>=value，用在驗證數字類型的參數上                           |
+| `@Max(value)`      |                                                                |
+| `@Size(min,max)`   |                                                                |
+| `@Email`           |                                                                |
+| `@Pattern(regexp)` |                                                                |
+| `@Past`            |                                                                |
+| `@Future`          |                                                                |
+| `@AssertTrue`      |                                                                |
+| `@AssertFalse`     |                                                                |
+| `@Null`            |                                                                |
 
-<u>4.使用@RequestBody時，要在該參數加上@Valid註解，才能讓這個calss裡的驗證請求參數生效<u>  
-  例如:public String create(@RequestBody @Valid Student student)  
-  
-<u>5.使用@RequestParam、@RequestHeader、@PathVariable時，需要在Controller加上@Validated註解，才能夠讓驗證請求參數的註解生效<u>  
-  例如:``@Validated  
-       ``@RestController  
+<u>4.使用`@RequestBody`時，要在該參數加上`@Valid`註解，才能讓這個calss裡的驗證請求參數生效<u>  
+  例如:
+  ```java
+  public String create(@RequestBody @Valid Student student)  
+  ```
+<u>5.使用`@RequestParam`、`@RequestHeader`、`@PathVariable`時，需要在Controller加上`@Validated`註解，才能夠讓驗證請求參數的註解生效<u>  
+  例如:`@Validated`  
+       `@RestController`  
        public class StudentController  
-       然後在方法加上``@Min(100)等等的註解  
+       然後在方法加上`@Min(100)`等等的註解  
        ```java
        public String read(@PathVariable @Min(100) Integer studentId)
        ```
 所以
-``@RequestBody:在參數前面加上``@Valid  
-其餘三個:在Class加上``@Validated  
+`@RequestBody`:在參數前面加上`@Valid`  
+其餘三個:在Class加上`@Validated`  
 
