學習實作出RESTful API與使用各種Mapping註解

--- a/Spring Boot/20240620Day2.md
+++ b/Spring Boot/20240620Day2.md
@@ -67,12 +67,14 @@ public class Student {
 
 ### 三.驗證請求參數  
 <u>1.Spring Boot 2.3版本以後有使用驗證請求參數註解，需要設定<u>  
+        ```java
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-
+        ```
 <u>2.一般檢查參數有沒有null<u>  
+   ```java
     @PostMapping("/students")
     public String create(@RequestBody Student student){
         if(student.getId() == null){
@@ -80,7 +82,7 @@ public class Student {
         }
         return "執行資料庫的 Create 操作";
     }
-
+   ```
 <u>3.Spring Boot的檢查參數有沒有null<u>  
 
 ```java  
@@ -129,14 +131,12 @@ public class Student {
   public String create(@RequestBody @Valid Student student)  
   ```
 <u>5.使用`@RequestParam`、`@RequestHeader`、`@PathVariable`時，需要在Controller加上`@Validated`註解，才能夠讓驗證請求參數的註解生效<u>  
-  例如:`@Validated`  
-       `@RestController`  
-       public class StudentController  
-       然後在方法加上`@Min(100)`等等的註解  
+  例如:`@Validated`、`@RestController`  
+       public class StudentController，然後在方法加上`@Min(100)`等等的註解  
        ```java
        public String read(@PathVariable @Min(100) Integer studentId)
        ```
-所以
+所以  
 `@RequestBody`:在參數前面加上`@Valid`  
 其餘三個:在Class加上`@Validated`  
 
