--- a/Spring Boot/20240620Day2.md
+++ b/Spring Boot/20240620Day2.md
@@ -67,12 +67,12 @@ public class Student {
 
 ### 三.驗證請求參數  
 *1.Spring Boot 2.3版本以後有使用驗證請求參數註解，需要設定*  
-        `
+        ```
         <dependency>  
             <groupId>org.springframework.boot</groupId>  
             <artifactId>spring-boot-starter-validation</artifactId>  
         </dependency>  
-        `
+        ```  
 *2.一般檢查參數有沒有null*  
    ```java
     @PostMapping("/students")
@@ -134,9 +134,9 @@ public class Student {
   例如:`@Validated`、`@RestController`  
        public class StudentController，然後在方法加上`@Min(100)`等等的註解  
        `
-       public String read(@PathVariable @Min(100) Integer studentId)  
-       `
+       public String read(@PathVariable @Min(100) Integer studentId)
+       `  
 所以  
-`@RequestBody`:在參數前面加上`@Valid`  
-其餘三個:在Class加上`@Validated`  
+．`@RequestBody`:在參數前面加上`@Valid`
+．其餘三個:在Class加上`@Validated`  
 
