Controller層統一的Exception處理+攔截器Interceptor

--- a/Spring Boot/20240622Day4.md
+++ b/Spring Boot/20240622Day4.md
@@ -2,15 +2,16 @@
 
 ### 一.Controller層統一的Exception處理
 `@ControllerAdvice`+`@ExceptionHandler`:自訂義每個Exception所返回的http response  
+
 *1.`@ControllerAdvice`*  
-用法:只能加在class上  
-用途:將這class變成一個bean，並且可以在內部使用`@ExceptionHandler`  
+- 用法:只能加在class上  
+- 用途:將這class變成一個bean，並且可以在內部使用`@ExceptionHandler`  
 
 *2.`@ExceptionHandler`*  
-用法:只能加在方法上  
-用途:去catch方法所噴出的Exception  
+- 用法:只能加在方法上  
+- 用途:去catch方法所噴出的Exception  
 
-Controller:  
+- Controller:  
 ```java
 @RestController
 public class MyController {
@@ -26,7 +27,7 @@ public class MyController {
     }
 }
 ```
-處理Exception:  
+- 處理Exception:  
 ```java
 @ControllerAdvice
 public class MyExceptionHandler {
@@ -46,23 +47,29 @@ public class MyExceptionHandler {
 }
 ```
 
-※會看執行的Exception是哪個再去找對應的`@ExceptionHandler`  
-※如果每個Exception都要處裡的話，那會寫不完，所以Spring Boot就有提供方法，再找ExceptionHandler時，會去看繼承關係  
+- ※會看執行的Exception是哪個再去找對應的`@ExceptionHandler`  
+
+- ※如果每個Exception都要處裡的話，那會寫不完，所以Spring Boot就有提供方法，再找ExceptionHandler時，會去看繼承關係  
   (Throwable <- Exception <- RuntimeException <- IllegalArgumentException)  
-  例如:發生IllegalArgumentException時，會先去找有無`@ExceptionHandler`在處理，沒有的話就會再找RuntimeException，在沒有會找到Exception，都沒有就會找到Throwable為止  
-※一般來說寫到Exception即可，就有涵蓋到所有程式相關的錯誤，最高寫到Exception層級而已，因為Throwable無法處理Error那裡的問題  
-※使用`@ControllerAdvice`的好處:統一管理Exception，就不用在Controller裡寫try catch，也程式也變得容易閱讀，`@ControllerAdvice`底層實現的邏輯就是由Spring AOP所實作的  
-※只要使用`@RestController`、`@Controller`等Controller時，`@ControllerAdvice`就會感應到，要執行`@ExceptionHandler`  
+  例如:發生IllegalArgumentException時，會先去找有無`@ExceptionHandler`在處理，沒有的話就會再找RuntimeException，
+  在沒有會找到Exception，都沒有就會找到Throwable為止  
+
+- ※一般來說寫到Exception即可，就有涵蓋到所有程式相關的錯誤，最高寫到Exception層級而已，因為Throwable無法處理Error那裡的問題  
+
+- ※使用`@ControllerAdvice`的好處:統一管理Exception，就不用在Controller裡寫try catch，也程式也變得容易閱讀，
+  `@ControllerAdvice`底層實現的邏輯就是由Spring AOP所實作的  
+
+- ※只要使用`@RestController`、`@Controller`等Controller時，`@ControllerAdvice`就會感應到，要執行`@ExceptionHandler`  
 
 
-使用`@ControllerAdvice`的Controller的寫法:  
+- 使用`@ControllerAdvice`的Controller的寫法:  
     ```java
     @RequestMapping("/test2")
     public String test2(){
         throw new IllegalArgumentException("test2 error");
     }
     ```
-未使用`@ControllerAdvice`的Controller的寫法:
+- 未使用`@ControllerAdvice`的Controller的寫法:
     ```java
     @RequestMapping("/test2")
     public String test2(){
@@ -74,7 +81,7 @@ public class MyExceptionHandler {
     }
     ```
 ### 二.攔截器Interceptor  
-Controller:  
+- Controller:  
     ```java
     @RequestMapping("/test1")
     public String test1(){
@@ -82,7 +89,7 @@ Controller:
         return "Hello test1";
     }
    ```
-設定檔:
+- 設定檔:
     ```java
     @Configuration
     public class MyConfig implements WebMvcConfigurer {
