--- a/Spring Boot/20240620Day2.md
+++ b/Spring Boot/20240620Day2.md
@@ -67,10 +67,10 @@ public class Student {
 
 ### 三.驗證請求參數  
 *1.Spring Boot 2.3版本以後有使用驗證請求參數註解，需要設定*  
-    <dependency>
+    `<dependency>
      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
-    </dependency>  
+    </dependency>`  
         
 *2.一般檢查參數有沒有null*  
    ```java
