Update and rename 20240627Day6.java to 20240627Day6.md

--- a/Spring Boot/20240627Day6.md
+++ b/Spring Boot/20240627Day6.md
@@ -1,13 +1,11 @@
-/*
-有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止
-2024/06/26 Day6
-Spring Boot篇
-*/
+>有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止 2024/06/26 Day6 Spring Boot篇  
 
-//一.使用IntelliJ的DB功能連線mySql建立table
-1.新增資料庫
+### 一.使用IntelliJ的DB功能連線mySql建立table  
+- 1.新增資料庫  
+  ```SQL
   create DATABASE mykdbc
-2.新增Table
+  ```
+- 2.新增Table  
   create table student(
     id int PRIMARY KEY,
     name VARCHAR(30)
