Spring Boot資料庫連線+NamedParameterJdbcTemplate

--- a/Spring Boot/20240627Day6.md
+++ b/Spring Boot/20240627Day6.md
@@ -5,47 +5,58 @@
   ```SQL
   create DATABASE mykdbc
   ```
-- 2.新增Table  
+- 2.新增Table
+  ```SQL 
   create table student(
     id int PRIMARY KEY,
     name VARCHAR(30)
     )
-
-//二.資料庫連線設定
-1.pom.xml新增jdbc，可以讓spring bott的程式使用spring jdbc
+  ```
+### 二.資料庫連線設定  
+- 1.pom.xml新增jdbc，可以讓spring bott的程式使用spring jdbc  
+```HTML
   <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
   </dependency>
-
-2.maven mysql安裝，添加mysql的driver
+```
+*2.maven mysql安裝，添加mysql的driver*   
+```HTML
   <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 <dependency>
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
     <version>8.0.22</version>
 </dependency>
+```
+*3.application.properties是spring boot的設定檔，存放spring boot的設定值*  
+  - 設定使用的驅動程式:  
+  ```HTML
+  spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver  
+  ```
+  - 設定連接myjdbc的資料庫+時區+編碼:  
+  ```HTML
+  spring.datasource.url=jdbc:mysql://localhost:3306/myjdbc?serverTimezone=Asia/Taipei&characterEncoding=utf-8  
+  ```
+  - 設定連線帳號:  
+  ```HTML
+  spring.datasource.username=root  
+  ```
+  - 設定連線密碼:  
+  ```HTML
+  spring.datasource.password=springboot  
+  ```
+### 三.使用NamedParameterJdbcTemplate  
+上述設定都完成後，啟動Spring boot時，由Spring jdbc自動創建一個NamedParameterJdbcTemplate的Bean放在Spring容器  
+*1.sql語法分兩大類* 
+ - update():INSERT UPDATE DELETE  
+ - query()+queryForObject():SELECT  
 
-3.application.properties是spring boot的設定檔，存放spring boot的設定值
-  設定使用的驅動程式:
-  spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-  設定連接myjdbc的資料庫+時區+編碼:
-  spring.datasource.url=jdbc:mysql://localhost:3306/myjdbc?serverTimezone=Asia/Taipei&characterEncoding=utf-8
-  設定連線帳號:
-  spring.datasource.username=root
-  設定連線密碼:
-  spring.datasource.password=springboot
-
-//三.使用NamedParameterJdbcTemplate
-上述設定都完成後，啟動Spring boot時，由Spring jdbc自動創建一個NamedParameterJdbcTemplate的Bean放在Spring容器
-1.sql語法分兩大類
-  update():INSERT UPDATE DELETE
-  query()+queryForObject():SELECT
-
-UPDATE:
-1.sql語法中加上「:」，就代表這個值是動態變數
-2.透過@RequestBody的註解，取得Request Body的參數，再放在Map給SQL參數使用
-@RestController
+**UPDATE:** 
+*1.sql語法中加上「:」，就代表這個值是動態變數*
+*2.透過`@RequestBody`的註解，取得Request Body的參數，再放在Map給SQL參數使用*
+`@RestController`
+```java
 public class StudentController {
 
     @Autowired
@@ -65,10 +76,11 @@ public class StudentController {
         return "執行 INSERT SQL";
     }
 }
-
-DELETE:
-1.透過@PathVariable取的URL中的值，再放在Map給SQL參數使用
-@RestController
+```
+**DELETE:**  
+*1.透過`@PathVariable`取的URL中的值，再放在Map給SQL參數使用*  
+`@RestController`  
+```java
 public class StudentController {
 
     @Autowired
@@ -87,3 +99,4 @@ public class StudentController {
         return "執行 DELETE SQL";
     }
 }
+```
