Spring Boot資料庫連線+NamedParameterJdbcTemplate

--- a/Spring Boot/20240627Day6.md
+++ b/Spring Boot/20240627Day6.md
@@ -1,26 +1,26 @@
 >有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止 2024/06/26 Day6 Spring Boot篇  
 
 ### 一.使用IntelliJ的DB功能連線mySql建立table  
-- 1.新增資料庫  
-  ```SQL
-  create DATABASE mykdbc
-  ```
-- 2.新增Table
-  ```SQL 
-  create table student(
-    id int PRIMARY KEY,
-    name VARCHAR(30)
-    )
-  ```
+***1.新增資料庫***    
+```SQL
+create DATABASE mykdbc
+```
+***2.新增Table***  
+```SQL 
+create table student(
+id int PRIMARY KEY,
+name VARCHAR(30)
+)
+```
 ### 二.資料庫連線設定  
-- 1.pom.xml新增jdbc，可以讓spring bott的程式使用spring jdbc  
+***1.pom.xml新增jdbc，可以讓spring bott的程式使用spring jdbc***  
 ```HTML
   <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
   </dependency>
 ```
-*2.maven mysql安裝，添加mysql的driver*   
+***2.maven mysql安裝，添加mysql的driver***   
 ```HTML
   <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 <dependency>
@@ -29,7 +29,7 @@
     <version>8.0.22</version>
 </dependency>
 ```
-*3.application.properties是spring boot的設定檔，存放spring boot的設定值*  
+***3.application.properties是spring boot的設定檔，存放spring boot的設定值***  
   - 設定使用的驅動程式:  
   ```HTML
   spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver  
@@ -48,13 +48,13 @@
   ```
 ### 三.使用NamedParameterJdbcTemplate  
 上述設定都完成後，啟動Spring boot時，由Spring jdbc自動創建一個NamedParameterJdbcTemplate的Bean放在Spring容器  
-*1.sql語法分兩大類* 
+***1.sql語法分兩大類*** 
  - update():INSERT UPDATE DELETE  
  - query()+queryForObject():SELECT  
 
 **UPDATE:** 
-*1.sql語法中加上「:」，就代表這個值是動態變數*
-*2.透過`@RequestBody`的註解，取得Request Body的參數，再放在Map給SQL參數使用*
+***1.sql語法中加上「:」，就代表這個值是動態變數***
+***2.透過`@RequestBody`的註解，取得Request Body的參數，再放在Map給SQL參數使用***
 `@RestController`
 ```java
 public class StudentController {
@@ -78,7 +78,7 @@ public class StudentController {
 }
 ```
 **DELETE:**  
-*1.透過`@PathVariable`取的URL中的值，再放在Map給SQL參數使用*  
+***1.透過`@PathVariable`取的URL中的值，再放在Map給SQL參數使用***  
 `@RestController`  
 ```java
 public class StudentController {
