學習實作出RESTful API與使用各種Mapping註解

--- a/Spring Boot/20240620Day2.md
+++ b/Spring Boot/20240620Day2.md
@@ -21,7 +21,7 @@ public class Student {
 `@PutMapping`  
 `@DeleteMapping`  
 
-*1.POST方法*  
+***1.POST方法***  
 限制前端只能用POST方法  
 
 ```java
@@ -38,7 +38,7 @@ public class Student {
         return "執行資料庫的 Create 操作";
     }
 ```
-*2.GET方法*  
+***2.GET方法***  
 ```java 
     @GetMapping("/students/{studentId}")
     public String read(@PathVariable Integer studentId){
@@ -46,7 +46,7 @@ public class Student {
     }
 ```
 
-*3.PUT方法*  
+***3.PUT方法***  
 ```java 
     @PutMapping("students/{studentId}")
     public String update(@PathVariable Integer studentId,
@@ -55,7 +55,7 @@ public class Student {
     }
 ```
    
-*4.DELETE方法* 
+***4.DELETE方法*** 
 ```java
     @DeleteMapping("students/{studentId}")
     public String delete(@PathVariable Integer studentId){
@@ -66,13 +66,14 @@ public class Student {
 可以呈現這個project裡的所有url路徑
 
 ### 三.驗證請求參數  
-*1.Spring Boot 2.3版本以後有使用驗證請求參數註解，需要設定*  
-    `<dependency>
-     <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-validation</artifactId>
-    </dependency>`  
-        
-*2.一般檢查參數有沒有null*  
+***1.Spring Boot 2.3版本以後有使用驗證請求參數註解，需要設定***  
+```html
+<dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-validation</artifactId>
+</dependency>`  
+```        
+***2.一般檢查參數有沒有null***  
    ```java
     @PostMapping("/students")
     public String create(@RequestBody Student student){
@@ -82,7 +83,7 @@ public class Student {
         return "執行資料庫的 Create 操作";
     }
    ```
-*3.Spring Boot的檢查參數有沒有null*  
+***3.Spring Boot的檢查參數有沒有null*** 
 
 ```java  
 //在id上加上@NotNull
@@ -124,12 +125,12 @@ public class Student {
 | `@AssertFalse`     |                                                                |
 | `@Null`            |                                                                |
 
-*4.使用`@RequestBody`時，要在該參數加上`@Valid`註解，才能讓這個calss裡的驗證請求參數生效*  
+***4.使用`@RequestBody`時，要在該參數加上`@Valid`註解，才能讓這個calss裡的驗證請求參數生效***  
   例如:
   ```java
   public String create(@RequestBody @Valid Student student)  
   ```
-*5.使用`@RequestParam`、`@RequestHeader`、`@PathVariable`時，需要在Controller加上`@Validated`註解，才能夠讓驗證請求參數的註解生效*  
+***5.使用`@RequestParam`、`@RequestHeader`、`@PathVariable`時，需要在Controller加上`@Validated`註解，才能夠讓驗證請求參數的註解生效***  
   例如:`@Validated`、`@RestController`  
        public class StudentController，然後在方法加上`@Min(100)`等等的註解  
        `
