KeyHolder取的自動生成的id+batchUpdate()大量執行SQL的方法

--- a/Spring Boot/20240627Day7.md
+++ b/Spring Boot/20240627Day7.md
@@ -1,26 +1,20 @@
-/*
-有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止
-2024/06/27 Day7
-Spring Boot篇
-*/
+>有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止 2024/06/27 Day7 Spring Boot篇  
 
-//一.當table的id會自動增加時，可以使用KeyHolder取得id的值
-1.配合mysql DB新建Student Table
-  
-auto_increment:為mysql 自動生成key的語法
-
+### 一.當table的id會自動增加時，可以使用KeyHolder取得id的值  
+***1.配合mysql DB新建Student Table***  
+**auto_increment**:為mysql 自動生成key的語法  
+```sql
 create table student(
     id int PRIMARY KEY auto_increment,
     name VARCHAR(30)
     );
+```
+***2.KeyHolder***
+執行insert時取得資料庫自動生成的key  
 
-
-2.KeyHolder
-執行insert時取得資料庫自動生成的key
-
-3.int id = keyHolder.getKey().intValue();
-會因DB類型而用不同的.intValue();
-
+***3.int id = keyHolder.getKey().intValue();***  
+會因DB類型而用不同的.intValue();  
+```java
 @RestController
 public class StudentController {
 
@@ -43,10 +37,10 @@ public class StudentController {
         return "執行 INSERT SQL";
     }
   }  
-
-//二.大量的執行一批insert/update/delete SQL
-1.batchUpdate();
-
+```
+### 二.大量的執行一批insert/update/delete SQL 
+***1.batchUpdate();***  
+```java
 @RestController
 public class StudentController {
 
@@ -69,13 +63,13 @@ public class StudentController {
     }
 
   } 
-
-
-3.迴圈中使用Update()，也是可以insert大量資料，但會call多次，效能較差，所以有大量insert需求時，使用batchUpdate()效能會更好!
-
-        for (int i=0; i<studentList.size(); i++){
-            Student student = studentList.get(i);
-            parameterSources[i] = new MapSqlParameterSource();
-            parameterSources[i].addValue("studentName",student.getName());
-            namedParameterJdbcTemplate.Update(sql,parameterSources);
-        }
+```
+***3.迴圈中使用Update()，也是可以insert大量資料，但會call多次，效能較差，所以有大量insert需求時，使用batchUpdate()效能會更好!***  
+```java
+for (int i=0; i<studentList.size(); i++){
+  Student student = studentList.get(i);
+  parameterSources[i] = new MapSqlParameterSource();
+  parameterSources[i].addValue("studentName",student.getName());
+  namedParameterJdbcTemplate.Update(sql,parameterSources);
+}
+```
