--- a/Spring Boot/20240629Day8.md
+++ b/Spring Boot/20240629Day8.md
@@ -1,21 +1,16 @@
-/*
-有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止
-2024/06/29 Day8
-Spring Boot篇
-*/
+>有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止 2024/06/29 Day8 Spring Boot篇  
+##NamedParameterJdbcTemplate##  
 
-/*NamedParameterJdbcTemplate*/
+###一.query()### 
+- 『query(String sql, Map<String,Obiect> map, RowMapper<T> rowMapper)』  
+ - String sql:放要執行的sql語法
+ - Map<String,Obiect> map:放sql語法裡面的變數的值
+ - RowMapper<T> rowMapper:將資料庫查詢出來的數據，轉換成Java Object
 
-//一.query()
-『query(String sql, Map<String,Obiect> map, RowMapper<T> rowMapper)』
-※String sql:放要執行的sql語法
-※Map<String,Obiect> map:放sql語法裡面的變數的值
-※RowMapper<T> rowMapper:將資料庫查詢出來的數據，轉換成Java Object
-
-※在寫select sql時，不要使用*號※
-使用*號的缺點:
-1.花費額外的網路流量
-2.無法提升資料庫查詢的速度
+※在寫select sql時，不要使用*號※  
+使用*號的缺點:  
+- 1.花費額外的網路流量  
+- 2.無法提升資料庫查詢的速度  
 
 
 //二.RowMapper
