--- a/Spring Boot/20240629Day8.md
+++ b/Spring Boot/20240629Day8.md
@@ -7,17 +7,17 @@
   - Map<String,Obiect> map:放sql語法裡面的變數的值
   - RowMapper<T> rowMapper:將資料庫查詢出來的數據，轉換成Java Object
 
-※在寫select sql時，不要使用*號※  
+**※在寫select sql時，不要使用*號※**  
 使用*號的缺點:  
 - 1.花費額外的網路流量  
 - 2.無法提升資料庫查詢的速度  
 
 
-//二.RowMapper
-1.implements的RowMapper一定要是import org.springframework.jdbc.core.RowMapper
-2.用來將DB的資料庫格式轉換成Java語法，例如:List<Student> studentList
-3.方法返回值，一定要跟class梵行的值一樣
-
+### 二.RowMapper  
+***1. implements的RowMapper一定要是import org.springframework.jdbc.core.RowMapper***  
+***2. 用來將DB的資料庫格式轉換成Java語法，例如:List<Student> studentList***  
+***3. 方法返回值，一定要跟class梵行的值一樣***  
+```java
 public class StudentRowMapping implements RowMapper<Student> {
     @Override
     public Student mapRow(ResultSet rs, int rowNum) throws SQLException {
@@ -38,17 +38,15 @@ public class StudentRowMapping implements RowMapper<Student> {
         return student;
     }
 }
-
-//ResultSet rs:從資料庫中取得的數據
-//int rowNum:取到第幾筆資料
-
-
-    @GetMapping("/students")
-    public List<Student> select(){
-        String sql = "select id, name from student";
-        Map<String, Object> map = new HashMap<>();
-
-        List<Student> list = namedParameterJdbcTemplate.query(sql,map,new StudentRowMapping());
-        return list;
-    }
-
+```
+**ResultSet rs:從資料庫中取得的數據**  
+**int rowNum:取到第幾筆資料**  
+```java
+@GetMapping("/students")
+public List<Student> select(){
+   String sql = "select id, name from student";
+   Map<String, Object> map = new HashMap<>();
+   List<Student> list = namedParameterJdbcTemplate.query(sql,map,new StudentRowMapping());
+   return list;
+}
+```
