--- a/Spring Boot/20240629Day8.md
+++ b/Spring Boot/20240629Day8.md
@@ -1,7 +1,7 @@
 >有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止 2024/06/29 Day8 Spring Boot篇  
 ##NamedParameterJdbcTemplate##  
 
-###一.query()### 
+### 一.query()  
 - 『query(String sql, Map<String,Obiect> map, RowMapper<T> rowMapper)』  
   - String sql:放要執行的sql語法
   - Map<String,Obiect> map:放sql語法裡面的變數的值
