--- a/Spring Boot/20240701Day9.md
+++ b/Spring Boot/20240701Day9.md
@@ -1,40 +1,39 @@
-/*
-有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止
-2024/07/o1 Day9
-Spring Boot篇
-*/
+>有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止 2024/07/o1 Day9 Spring Boot篇  
 
-//一.query和queryForObject的差別
-query()方法:
-※返回值是一個List，裡面可能會有0個、1個或是N個以上的數據
-※適合用在所有使用SELECT sql查詢的情境
+### 一.query和queryForObject的差別  
+**query()方法:**  
+- 返回值是一個List，裡面可能會有0個、1個或是N個以上的數據  
+- 適合用在所有使用SELECT sql查詢的情境  
+```java
 List<Student> list = namedParameterJdbcTemplate.query(sql,map,new StudentRowMapping());
 list.get(0)
+```
+**queryForObject()方法:**  
+- 返回值是一個java object  
+- 僅適合用在SELECT count(*)  
+```java
+@GetMapping("/students/{studentId}")
+public Student select(@PathVariable Integer studentId){
+   String countSql = "select count(*) from student";
+   Map<String, Object> countMap = new HashMap<>();
+   Integer count = namedParameterJdbcTemplate.queryForObject(countSql, countMap, Integer.class);
+   System.out.println("Student table中的總數是"+count);
+```
+### 二.MVC的架構:Model、View、Controller  
+- View:使用Html模板呈現數據
+- Controller:控制器，負責轉發Http request
+- Model:負責業務邏輯、數據處裡
 
-queryForObject()方法:
-※返回值是一個java object
-※僅適合用在SELECT count(*)
-    @GetMapping("/students/{studentId}")
-    public Student select(@PathVariable Integer studentId){
-        String countSql = "select count(*) from student";
-        Map<String, Object> countMap = new HashMap<>();
-        Integer count = namedParameterJdbcTemplate.queryForObject(countSql, countMap, Integer.class);
-        System.out.println("Student table中的總數是"+count);
+**MVC主要是概念**  
+- Spring:Controller-Service-Dao三層式架構  
+  - Class的命名需要以Controller、Service、Dao來做結尾，用來表示這個class是哪一層的
+      - 例如:StudentController、StudentService、StudentDao  
+  - 將Controller、Service、Dao這些class變成Bean，並使用@Autowired注入
+  - Controller的Class要用@RestController，其餘用@Component即可
+  - Dao只能執行SQL不能處理業務邏輯
 
-//二.MVC的架構:Model、View、Controller
-View:使用Html模板呈現數據
-Controller:控制器，負責轉發Http request
-Model:負責業務邏輯、數據處裡
-MVC主要是概念
-
-Spring:Controller-Service-Dao三層式架構
-※Class的命名需要以Controller、Service、Dao來做結尾，用來表示這個class是哪一層的
-  例如:StudentController、StudentService、StudentDao
-※將Controller、Service、Dao這些class變成Bean，並使用@Autowired注入
-※Controller的Class要用@RestController，其餘用@Component即可
-※Dao只能執行SQL不能處理業務邏輯
-
-//1.Controller:負責接收前端傳來的Http request，並且驗證請求參數
+***1.Controller:負責接收前端傳來的Http request，並且驗證請求參數***  
+```java
 @RestController
 public class StudentController {
 
@@ -51,16 +50,16 @@ public class StudentController {
     public Student select(@PathVariable Integer studentId){
         return studentService.getById(studentId);
     }
-
-
-//2.Service:負責業務邏輯
+```
+***2.Service:負責業務邏輯***  
+```java
 public interface StudentService {
 
     void insert(Student student);
     Student getById(Integer studentId);
 }
-
-
+```
+```java
 @Component
 public class StudentServiceImpl implements StudentService{
 
@@ -76,15 +75,16 @@ public class StudentServiceImpl implements StudentService{
         return studentDao.getById(studentId);
     }
 }
-
-//3.Dao:負責和資料庫溝通
+```
+***3.Dao:負責和資料庫溝通***  
+```java
 public interface StudentDao {
 
     void insert(Student student);
     Student getById(Integer studentId);
 }
-
-
+```
+```java
 @Component
 public class StudentDaoImpl implements StudentDao{
 
@@ -125,8 +125,9 @@ public class StudentDaoImpl implements StudentDao{
         }
     }
 }
-
-//4.Model:跟資料庫對應的class放在這
+```
+***4.Model:跟資料庫對應的class放在這***  
+```java
 public class Student {
     Integer id;
     String name;
@@ -147,8 +148,9 @@ public class Student {
         this.name = name;
     }
 }
-
-//5.RowMapper:放RowMapper相關
+```
+***5.RowMapper:放RowMapper相關***  
+```java
 public class StudentRowMapper implements RowMapper<Student> {
     @Override
     public Student mapRow(ResultSet rs, int rowNum) throws SQLException {
@@ -169,3 +171,4 @@ public class StudentRowMapper implements RowMapper<Student> {
         return student;
     }
 }
+```
