--- a/Spring Boot/20240702Day10.md
+++ b/Spring Boot/20240702Day10.md
@@ -1,36 +1,34 @@
-/*
-有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止
-2024/07/02 Day10
-Spring Boot篇
-*/
+>有空時花大概1小時左右學習微服務相關技術直到懶惰或學不動為止 2024/07/02 Day10 Spring Boot篇  
+###一.Service與Dao的註解另一種用法  
+**前端 <=> Controller <=> Service <=> Dao <=> 資料庫DB**  
+- 寫法一:@RestController @Component @Component
+- 寫法二:@RestController @Service   @Repository
+以上Service與Dao使用的註解效果都一樣，都是產生一個Bean  
 
-//一.Service與Dao的註解另一種用法
-前端 <=> Controller <=> Service <=> Dao <=> 資料庫DB
-寫法一:@RestController @Component @Component
-寫法二:@RestController @Service   @Repository
-以上Service與Dao使用的註解效果都一樣，都是產生一個Bean
-
-1.@Service:
+***1.@Service:***  
+```java
 @Service
 public class StudentServiceImpl implements StudentService{
-
-2.@Repository:
+```
+***2.@Repository:***  
+```java
 @Repository
 public class StudentDaoImpl implements StudentDao{
-
-//二.交易管理@Transactional
-※交易(Transaction)，是資料庫中的一種用法
-※可以在一個交易裡包含"多個資料庫操作"，這些資料庫操作，要嘛"一起成功"，要嘛"一起失敗"
-※交易失敗會rollback
-※用法加在class上或方法上(通常是加在方法上)
-※用途:使用"交易"來管理這個方法中的資料庫操作
-※通常是加在Service層，因為Service層才可以取得Dao的資料庫操作，又因為交易的本質是去管理多個資料庫的操作，要嘛"一起成功"，要嘛"一起失敗"，因此@Transactional通常使用在Service層上
-※需要滿足ACID特性的資料庫，才能夠執行交易管理(NOSQL可能就沒辦法使用)
-Atomicity 原子性
-Consistency 一致性
-Isolation 隔離性
-Durability 持久性
-
+```
+### 二.交易管理@Transactional  
+- 交易(Transaction)，是資料庫中的一種用法
+- 可以在一個交易裡包含"多個資料庫操作"，這些資料庫操作，要嘛"一起成功"，要嘛"一起失敗"
+- 交易失敗會rollback
+- 用法加在class上或方法上(通常是加在方法上)
+- 用途:使用"交易"來管理這個方法中的資料庫操作
+- 通常是加在Service層，因為Service層才可以取得Dao的資料庫操作，又因為交易的本質是去管理多個資料庫的操作，
+  要嘛"一起成功"，要嘛"一起失敗"，因此@Transactional通常使用在Service層上
+- 需要滿足ACID特性的資料庫，才能夠執行交易管理(NOSQL可能就沒辦法使用)
+  - Atomicity 原子性
+  - Consistency 一致性
+  - Isolation 隔離性
+  - Durability 持久性
+```java
 @Component
 public class AccountServiceImpl implements AccountService {
     
@@ -50,9 +48,10 @@ public class AccountServiceImpl implements AccountService {
         accountDao.addMoney(toAccountId, money);
     }
 }
-
-//三.多個資料庫的連線設定與操作
-# 多個資料庫
+```
+### 三.多個資料庫的連線設定與操作  
+**多個資料庫**
+```html
 spring.datasource.test1.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.test1.jdbc-url=jdbc:mysql://localhost:3306/test1?serverTimezone=Asia/Taipei&characterEncoding=utf-8
 spring.datasource.test1.username=root
@@ -62,19 +61,18 @@ spring.datasource.test2.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.test2.jdbc-url=jdbc:mysql://localhost:3306/test2?serverTimezone=Asia/Taipei&characterEncoding=utf-8
 spring.datasource.test2.username=root
 spring.datasource.test2.password=springboot
-
-# 單個資料庫
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/myjdbc?serverTimezone=Asia/Taipei&characterEncoding=utf-8
-#spring.datasource.username=root
-#spring.datasource.password=springboot
-
-/*
-1.datasource後面要加上要連到哪個資料庫
-2.URL的key要變jdbc-url跟單個不同
-3.會在新增一個連線設定的class，主要由prefix來指定哪個資料庫
-*/
-
+```
+**單個資料庫**
+```html
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/myjdbc?serverTimezone=Asia/Taipei&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=springboot
+```
+***1.datasource後面要加上要連到哪個資料庫***  
+***2.URL的key要變jdbc-url跟單個不同***  
+***3.會在新增一個連線設定的class，主要由prefix來指定哪個資料庫***  
+```java
 @Configuration
 public class DataSourceConfiguration {
 
@@ -90,8 +88,10 @@ public class DataSourceConfiguration {
             @Qualifier("test1DataSource") DataSource dataSource) {
         return new NamedParameterJdbcTemplate(dataSource);
     }
-  
-//4.Controller注入test1JdbcTemplate與test2JdbcTemplate這兩個bean，因為都是使用NamedParameterJdbcTemplate，所以要使用@Qualifier來指定是載入哪個bean進來，不然會打架!!
+```  
+***4.Controller注入test1JdbcTemplate與test2JdbcTemplate這兩個bean，因為都是使用NamedParameterJdbcTemplate，
+所以要使用`@Qualifier`來指定是載入哪個bean進來，不然會打架!!***  
+```java
 @RestController
 public class StudentController {
 
@@ -129,7 +129,6 @@ public class StudentController {
     }
 }
 
-
     // 連線到 test2 資料庫的 DataSource 和 NamedParameterJdbcTemplate
     @Bean
     @ConfigurationProperties(prefix = "spring.datasource.test2")
@@ -143,3 +142,4 @@ public class StudentController {
         return new NamedParameterJdbcTemplate(dataSource);
     }
 }
+```
