--- a/Spring Boot/20240718Day13.md
+++ b/Spring Boot/20240718Day13.md
@@ -47,6 +47,13 @@ public class CalculatorTest {
 | assertThrows(exception, method) | 判斷執行method時，會噴出exception       |
 
 
+| 方法   | url           | 說明                                      |
+| ------ | -------------- | ---------------------------------------- |
+| POST   | /Students     |Create(新增);創建一個新的Student           |
+| GET    | /Students/123 |Read(查詢);查詢Student id為123的資訊       |
+| PUT    | /Students/123 |Update(修改);更新Student id為123的資訊     |
+| DELETE | /Students/123 |Delete(刪除);刪除Student id為123的Student  |
+
 
 **assertThrows方法的範例:**  
 ```java
