--- a/Spring Boot/20240718Day13.md
+++ b/Spring Boot/20240718Day13.md
@@ -46,13 +46,12 @@ public class CalculatorTest {
 | assertFalse(A)                  | 判斷A為false                           |
 | assertThrows(exception, method) | 判斷執行method時，會噴出exception       |
 
-
-| 方法   | url           | 說明                                      |
-| ------ | -------------- | ---------------------------------------- |
-| POST   | /Students     |Create(新增);創建一個新的Student           |
-| GET    | /Students/123 |Read(查詢);查詢Student id為123的資訊       |
-| PUT    | /Students/123 |Update(修改);更新Student id為123的資訊     |
-| DELETE | /Students/123 |Delete(刪除);刪除Student id為123的Student  |
+| Assert系列用法              | 用途                                              |
+| -------------------------- | ------------------------------------------------- |
+| assertNull(A)              | 取得所有user                                      |
+| assertNotNull(A)           | 取得user id為123的user                            |
+| GET/users/123/articles     | 取得user id為123的user所寫的文章                  |
+| GET/users/123/articles/456 | 取得user id為123的user所寫的article id為456的文章 |
 
 
 **assertThrows方法的範例:**  
