--- a/Spring Boot/20240718Day13.md
+++ b/Spring Boot/20240718Day13.md
@@ -37,22 +37,14 @@ public class CalculatorTest {
 ```
 **二.Assert判斷(斷言)**  
 - 若是**不符合**assert判斷的預期結果，則**測試失敗**，以下為常用的Assert系列  
-| Assert系列用法                  | 用途                                   |
+| Assert系列用法                   | 用途                                  |
 | ------------------------------- | ------------------------------------- |
-| assertNull(A)                   | 判斷A為null                            |
-| assertNotNull(A)                | 判斷A不為null                          |
-| assertEquals(A,B)               | 判斷A和B相等，會使用equals()方法去判斷   |
-| assertTrue(A)                   | 判斷A為true                            |
-| assertFalse(A)                  | 判斷A為false                           |
-| assertThrows(exception, method) | 判斷執行method時，會噴出exception       |
-
-| Assert系列用法              | 用途                                              |
-| -------------------------- | ------------------------------------------------- |
-| assertNull(A)              | 取得所有user                                      |
-| assertNotNull(A)           | 取得user id為123的user                            |
-| GET/users/123/articles     | 取得user id為123的user所寫的文章                  |
-| GET/users/123/articles/456 | 取得user id為123的user所寫的article id為456的文章 |
-
+| assertNull(A)                   | 判斷A為nul                            |
+| assertNotNull(A)                | 判斷A不為null                         |
+| assertEquals(A,B)               | 判斷A和B相等，會使用equals()方法去判斷  |
+| assertTrue(A)                   | 判斷A為true                           |
+| assertFalse(A)                  | 判斷A為false                          |
+| assertThrows(exception, method) | 判斷執行method時，會噴出exception      |
 
 **assertThrows方法的範例:**  
 ```java
